--- a/components/activex/languages/activexstrconsts.zh_CN.po
+++ b/components/activex/languages/activexstrconsts.zh_CN.po
@@ -3,30 +3,30 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: X-1.6\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: \n"
-"Last-Translator: 郑建平@夏宗萍 aka  robsean  <robsean@126.com>\n"
+"PO-Revision-Date: 2025-05-21 21:30+0800\n"
+"Last-Translator: ACTom <i@actom.me>\n"
 "Language-Team: http://www.microsystem.studio\n"
 "MIME-Version: 1.0\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: zh_CN\n"
-"X-Generator: Poedit 1.8.7.1\n"
+"X-Generator: TyPoEditor 0.2\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
 #: activexstrconsts.axconvertdependanttypelibs
 msgid "Convert dependant typelibs"
-msgstr "转换相关的typelibs"
+msgstr "转换依赖的 typelibs"
 
 #: activexstrconsts.axcreatepackage
 msgid "Create package"
-msgstr "创建包"
+msgstr "创建软件包"
 
 #: activexstrconsts.axcreatevisualcomponenttactivexcontainerdescendant
 msgid "Create visual component (TActiveXContainer descendant)"
-msgstr "创建可视化组件(TActiveXContainer衍生)"
+msgstr "创建可视组件 (TActiveXContainer 衍生)"
 
 #: activexstrconsts.axfilecontainingtypelibrary
 msgid "File containing type library:"
-msgstr "文件含有类型库:"
+msgstr "包含类型库的文件："
 
 #: activexstrconsts.aximporttypelibrary
 msgid "Import Type Library"
@@ -34,14 +34,14 @@ msgstr "导入类型库"
 
 #: activexstrconsts.aximporttypelibrarymenu
 msgid "Import Type Library ..."
-msgstr "导入类型库..."
+msgstr "导入类型库 ..."
 
 #: activexstrconsts.axselectdirectorytostorepackageplpk
 #, object-pascal-format
 msgid "Select directory to store package %sP.lpk"
-msgstr "选择目录来储存包%sP.lpk"
+msgstr "选择用于存储软件包 %sP.lpk 的目录"
 
 #: activexstrconsts.axtypelibraryfilestlbdllexeocxolbtlbdllexeocxolballf
 msgid "Type library files (*.tlb;*.dll;*.exe;*.ocx;*.olb)|*.tlb;*.dll;*.exe;*.ocx;*.olb|All Files (*.*)|*.*"
-msgstr "类型库文件(*.tlb;*.dll;*.exe;*.ocx;*.olb)|*.tlb;*.dll;*.exe;*.ocx;*.olb|所有文件 (*.*)|*.*"
+msgstr "类型库文件 (*.tlb;*.dll;*.exe;*.ocx;*.olb)|*.tlb;*.dll;*.exe;*.ocx;*.olb|所有文件 (*.*)|*.*"
 
