--- a/components/anchordocking/languages/anchordockstr.zh_CN.po
+++ b/components/anchordocking/languages/anchordockstr.zh_CN.po
@@ -2,14 +2,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: X-1.9\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: \n"
+"PO-Revision-Date: 2025-05-21 21:34+0800\n"
 "Last-Translator: ACTom <i@actom.me>\n"
 "Language-Team: \n"
 "Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.3.2\n"
+"X-Generator: TyPoEditor 0.2\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
 #: anchordockstr.adrsafreesideofasplittermustnotbeanchorednodetypeancho
@@ -68,7 +68,7 @@ msgstr "自定义停靠点 \"%s\" 只能有一个站点。"
 
 #: anchordockstr.adrsdockinganchordocking
 msgid "Docking / Anchordocking"
-msgstr "停靠站 / 锚泊"
+msgstr "停靠站 / 锚定停靠"
 
 #: anchordockstr.adrsdockingoptions
 msgid "Docking options"
@@ -97,11 +97,11 @@ msgstr "空名称： "
 
 #: anchordockstr.adrsenableanchordock
 msgid "Enable docking of IDE Windows (Requires IDE restart)"
-msgstr ""
+msgstr "启用 IDE 窗口停靠（需要重启 IDE）"
 
 #: anchordockstr.adrsenableanchordockhint
 msgid "This option allows to organize groups of windows (or all windows) into a single window. For a \"classic\" IDE with only floating windows turn the option off."
-msgstr ""
+msgstr "此选项允许将窗口组（或所有窗口）组织到单个窗口中。对于只有浮动窗口的“经典”IDE，请关闭此选项。"
 
 #: anchordockstr.adrsenlargeside
 #, object-pascal-format
@@ -198,11 +198,11 @@ msgstr "模态窗体不能停靠"
 
 #: anchordockstr.adrsmoveheadertoleftwhenwidthheight100headeralignleft
 msgid "Move header to left when (Width/Height)*100>=HeaderAlignLeft"
-msgstr "当 (Width/Height)*100>=HeaderAlignLeft 时移动标题栏到左侧"
+msgstr "当 (宽度/高度)*100>=HeaderAlignLeft 时将标题移动到左侧"
 
 #: anchordockstr.adrsmoveheadertotopwhenwidthheight100headeraligntop
 msgid "Move header to top when (Width/Height)*100<=HeaderAlignTop"
-msgstr "当 (Width/Height)*100<=HeaderAlignTop 时移动标题栏到顶侧"
+msgstr "当 (宽度/高度)*100<=头部对齐顶部 时将头部移动到顶部"
 
 #: anchordockstr.adrsmovepageleft
 msgid "Move page left"
@@ -278,7 +278,7 @@ msgstr "显示标题栏"
 
 #: anchordockstr.adrssplitterresizestyle
 msgid "Splitter resize style:"
-msgstr ""
+msgstr "分割条调整大小样式："
 
 #: anchordockstr.adrssplitterthickness
 msgid "Splitter thickness"
@@ -312,33 +312,33 @@ msgstr "取消停靠"
 
 #: anchordockstr.setupmultiwindowideclassic
 msgid "Classic IDE (Multi-Window):"
-msgstr ""
+msgstr "经典 IDE (多窗口):"
 
 #: anchordockstr.setupmultiwindowideinfo
 msgid "The \"modern\" single Window mode still allows you to undock individual Windows and have several groups of Windows. The IDE will show additional \"Dock-Handles\" in each Window, which will allow you to change layout, but also require additional space."
-msgstr ""
+msgstr "“现代”单窗口模式仍然允许您拆离个别窗口并拥有多个窗口组。IDE 将在每个窗口中显示额外的“停靠手柄”，这将允许您更改布局，但同时也会占用额外的空间。"
 
 #: anchordockstr.setupmultiwindowidemodern
 msgid "Modern IDE (Single-Window):"
-msgstr ""
+msgstr "现代 IDE (单窗口)："
 
 #: anchordockstr.setupmultiwindowideoption
 msgid "You can change this in the IDE options under: \"Anchordocking\""
-msgstr ""
+msgstr "你可以在 IDE 选项中的 \"锚定停靠\" 部分进行更改。"
 
 #: anchordockstr.setupmultiwindowideseperatewindows
 msgid "There are separate windows for each part of the IDE (Editor, Components, Debug,...). They can all be individually moved around on the screen."
-msgstr ""
+msgstr "每个 IDE 部分（编辑器、组件、调试、...）都有单独的窗口。它们都可以在屏幕上单独移动。"
 
 #: anchordockstr.setupmultiwindowidesinglewindow
 msgid "The IDE consists out of a single Window. Different parts of the IDE are shown in panels of that Window. Some can be reached through a tabbed interface."
-msgstr ""
+msgstr "IDE 由一个窗口组成。IDE 的不同部分在该窗口的面板中显示。有些可以通过选项卡界面访问。"
 
 #: anchordockstr.sidelayout
 msgid "IDE Layout"
-msgstr ""
+msgstr "IDE 布局"
 
 #: anchordockstr.ssinglemultiwindow
 msgid "Single/Multi Window"
-msgstr ""
+msgstr "单窗口/多窗口"
 
