--- a/components/chmhelp/lhelp/languages/lhelp.zh_CN.po
+++ b/components/chmhelp/lhelp/languages/lhelp.zh_CN.po
@@ -3,13 +3,13 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: X-1.9\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: \n"
-"Last-Translator: 郑建平@夏宗萍 aka  robsean <robsean@126.com>\n"
+"PO-Revision-Date: 2025-05-21 21:37+0800\n"
+"Last-Translator: ACTom <i@actom.me>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: zh_CN\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: TyPoEditor 0.2\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
 #: lhelpstrconsts.slhelp_about
@@ -18,45 +18,45 @@ msgstr "关于"
 
 #: lhelpstrconsts.slhelp_about2
 msgid "&About ..."
-msgstr "关于...(&A)"
+msgstr "关于(&A) ..."
 
 #: lhelpstrconsts.slhelp_actions
 msgid "&Actions"
-msgstr ""
+msgstr "操作(&A)"
 
 #: lhelpstrconsts.slhelp_actionsgoback
 msgid "Go back"
-msgstr ""
+msgstr "返回"
 
 #: lhelpstrconsts.slhelp_actionsgoforward
 msgid "Go forward"
-msgstr ""
+msgstr "向前"
 
 #: lhelpstrconsts.slhelp_actionsgohome
 msgid "Go home"
-msgstr ""
+msgstr "返回主页"
 
 #: lhelpstrconsts.slhelp_actionsindex
 msgid "Search by &index"
-msgstr ""
+msgstr "按 索引 搜索(&I)"
 
 #: lhelpstrconsts.slhelp_actionssearch
 msgid "&Search by text"
-msgstr ""
+msgstr "按文本搜索(&S)"
 
 #: lhelpstrconsts.slhelp_actionstoc
 msgid "&TOC"
-msgstr ""
+msgstr "目录(&T)"
 
 #: lhelpstrconsts.slhelp_cannothandlethistypeofcontentforurl
 #, object-pascal-format
 msgid "Cannot handle this type of content. \"%s\" for url:%s%s"
-msgstr "不能处理这个目录(content)的类型.\"%s\"对于url:%s%s"
+msgstr "无法处理此类内容。“%s” 对于网址：%s%s"
 
 #: lhelpstrconsts.slhelp_cannothandlethistypeofsubcontentforurl
 #, object-pascal-format
 msgid "Cannot handle this type of subcontent. \"%s\" for url:%s%s"
-msgstr "不能处理这个子目录(subcontent)的类型.\"%s\"对于url:%s%s"
+msgstr "无法处理这种子内容类型。\"%s\" 对于 URL：%s%s"
 
 #: lhelpstrconsts.slhelp_close
 msgid "&Close"
@@ -64,7 +64,7 @@ msgstr "关闭(&C)"
 
 #: lhelpstrconsts.slhelp_closeconfirm
 msgid "You can hide Help via Esc key. Do you really want to close LHelp?"
-msgstr ""
+msgstr "你可以通过 Esc 键隐藏帮助。你真的要关闭 LHelp 吗？"
 
 #: lhelpstrconsts.slhelp_contents
 msgid "Contents"
@@ -72,7 +72,7 @@ msgstr "目录"
 
 #: lhelpstrconsts.slhelp_contextshowthehelpinformationrelatedtothiscontext
 msgid "    --context  :  Show the help information related to this context"
-msgstr "    --context  : 显示关于这个上下文的帮助信息"
+msgstr "    --context  :  显示与此上下文相关 的帮助信息"
 
 #: lhelpstrconsts.slhelp_copy
 msgid "Copy"
@@ -80,11 +80,11 @@ msgstr "复制"
 
 #: lhelpstrconsts.slhelp_copyhtmlsource
 msgid "Copy HTML source"
-msgstr ""
+msgstr "复制 HTML 源代码"
 
 #: lhelpstrconsts.slhelp_exit
 msgid "E&xit"
-msgstr "退出(&x)"
+msgstr "退出(&X)"
 
 #: lhelpstrconsts.slhelp_file
 msgid "&File"
@@ -100,19 +100,19 @@ msgstr "帮助(&H)"
 
 #: lhelpstrconsts.slhelp_helpfileschmchmallfiles
 msgid "Help files (*.chm)|*.chm|All files (*.*)|*"
-msgstr "Help文件(*.chm)|*.chm|所有文件 (*.*)|*"
+msgstr "帮助文件 (*.chm)|*.chm|所有文件 (*.*)|*"
 
 #: lhelpstrconsts.slhelp_helpshowthisinformation
 msgid "    --help     :  Show this information"
-msgstr "    --help     : 显示此信息"
+msgstr "    --help     :  显示此信息"
 
 #: lhelpstrconsts.slhelp_hide
 msgid "&Hide"
-msgstr ""
+msgstr "隐藏(&H)"
 
 #: lhelpstrconsts.slhelp_hidestarthiddenbutacceptcommunicationsviaipc
 msgid "    --hide     :  Start hidden but accept communications via IPC"
-msgstr "    --hide     :开始隐藏 但是通过IPC接受通讯"
+msgstr "    --hide     :  启动时隐藏但通过 IPC 接受通信"
 
 #: lhelpstrconsts.slhelp_index
 msgid "Index"
@@ -120,12 +120,12 @@ msgstr "索引"
 
 #: lhelpstrconsts.slhelp_indexloading
 msgid "Index Loading ..."
-msgstr "索引加载..."
+msgstr "索引加载中 ..."
 
 #: lhelpstrconsts.slhelp_ipcnamethenameoftheipcservertolistenonforprogramsw
 #, object-pascal-format
 msgid "    --ipcname  :  The name of the IPC server to listen on for%s              programs who wish to control the viewer"
-msgstr "    --ipcname  :IPC服务器来监听想要控制查看器%s       程序 的名称"
+msgstr "    --ipcname  :  要监听的 IPC 服务器的名称，以供希望控制查看器的程序使用%s"
 
 #: lhelpstrconsts.slhelp_keyword
 msgid "Keyword:"
@@ -143,34 +143,32 @@ msgstr "LHelp - %s"
 #: lhelpstrconsts.slhelp_lhelpchmfileviewerversioncopyrightcandrewhaineslaz
 #, object-pascal-format
 msgid "CHM file viewer%sVersion %s%sCopyright (C) Andrew Haines, %sLazarus contributors"
-msgstr "CHM文件查看器%s版本%s%s版权(C) Andrew Haines, %sLazarus贡献值"
+msgstr "CHM 文件查看器%s版本 %s%s版权所有 (C) Andrew Haines，%sLazarus 贡献者"
 
 #: lhelpstrconsts.slhelp_lhelpoptions
 msgid "  LHelp options:"
-msgstr "  LHelp选项:"
+msgstr "  LHelp 选项:"
 
 #: lhelpstrconsts.slhelp_loadedinms
 #, object-pascal-format
 msgid "Loaded: %s in %sms"
-msgstr "加载:%s在%sms"
+msgstr "已加载：%s，%sms"
 
 #: lhelpstrconsts.slhelp_loading
 #, object-pascal-format
 msgid "Loading: %s"
-msgstr "加载:%s"
+msgstr "加载中：%s"
 
 #: lhelpstrconsts.slhelp_noresults
 msgid "No Results"
-msgstr "没有结果(Results)"
+msgstr "没有结果"
 
 #: lhelpstrconsts.slhelp_notfound
 #, object-pascal-format
 msgid "%s not found!"
-msgstr "%s未找到!"
+msgstr "%s 未找到!"
 
 #: lhelpstrconsts.slhelp_ok
-#, fuzzy
-#| msgid "Ok"
 msgid "OK"
 msgstr "确定"
 
