--- a/components/compilers/c/languages/lazcstrconsts.zh_CN.po
+++ b/components/compilers/c/languages/lazcstrconsts.zh_CN.po
@@ -3,16 +3,16 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: X\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: \n"
-"Last-Translator: 郑建平@夏宗萍 aka  robsean  <robsean@126.com>\n"
+"PO-Revision-Date: 2025-05-21 21:43+0800\n"
+"Last-Translator: ACTom <i@actom.me>\n"
 "Language-Team: http://www.microsystem.studio\n"
 "MIME-Version: 1.0\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: zh_CN\n"
-"X-Generator: Poedit 1.8.7.1\n"
+"X-Generator: TyPoEditor 0.2\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
 #: lazcstrconsts.lcgnuprojectcandccompiler
 msgid "GNU project C and C++ compiler"
-msgstr "GNU项目C和C++编译器"
+msgstr "GNU 项目的 C 和 C++ 编译器"
 
