--- a/components/datadict/languages/ldd_consts.zh_CN.po
+++ b/components/datadict/languages/ldd_consts.zh_CN.po
@@ -3,18 +3,18 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: X-1.9\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: \n"
-"Last-Translator: 郑建平@夏宗萍 aka  robsean <robsean@126.com>\n"
+"PO-Revision-Date: 2025-05-21 21:57+0800\n"
+"Last-Translator: ACTom <i@actom.me>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: zh_CN\n"
-"X-Generator: Poedit 1.8.7.1\n"
+"X-Generator: TyPoEditor 0.2\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
 #: ldd_consts.ldd_availablecodegenerators
 msgid "Available code generators"
-msgstr "可用代码生成器"
+msgstr "可用的代码生成器"
 
 #: ldd_consts.ldd_cancel
 msgid "&Cancel"
@@ -34,15 +34,15 @@ msgstr "配置生产的代码"
 
 #: ldd_consts.ldd_databasedesktopapplication
 msgid "Database desktop application"
-msgstr "Database桌面应用程序"
+msgstr "数据库桌面应用程序"
 
 #: ldd_consts.ldd_datadictionary
 msgid "Data dictionary &file:"
-msgstr "Data字典文件(&f)"
+msgstr "数据字典 文件(&F)："
 
 #: ldd_consts.ldd_defaultdatadictdirectory
 msgid "Default data dictionary directory"
-msgstr "默认data字典目录"
+msgstr "默认数据字典目录"
 
 #: ldd_consts.ldd_fields
 msgid "Fields"
@@ -50,7 +50,7 @@ msgstr "字段"
 
 #: ldd_consts.ldd_fieldstogeneratecodefor
 msgid "Fields to generate code for"
-msgstr "字段来产生代码对于"
+msgstr "生成代码的字段"
 
 #: ldd_consts.ldd_filenameapplicationsfilter
 msgid "Applications|*.exe|Any file|*.*"
@@ -58,7 +58,7 @@ msgstr "应用程序|*.exe|任何文件|*.*"
 
 #: ldd_consts.ldd_filenameedit
 msgid "Data dictionary|*.fdd|Any file|*.*"
-msgstr "Data字典|*.fdd|任何文件|*.*"
+msgstr "数据字典|*.fdd|任何文件|*.*"
 
 #: ldd_consts.ldd_generatedcode
 msgid "Generated code"
@@ -94,7 +94,7 @@ msgstr "保存到"
 
 #: ldd_consts.ldd_sdcodefilter
 msgid "Pascal files|*.pp;*.pas;*.inc|All files|*.*"
-msgstr "Pascal文件|*.pp;*.pas;*.inc|所有文件|*.*"
+msgstr "Pascal 文件|*.pp;*.pas;*.inc|所有文件|*.*"
 
 #: ldd_consts.ldd_sdcodetitle
 msgid "Save file as"
@@ -114,7 +114,7 @@ msgstr "显示产生的代码"
 
 #: ldd_consts.ldd_usedatadictionary
 msgid "&Use Data dictionary for this project"
-msgstr "使用数据字典对于这个工程(&U)"
+msgstr "使用数据字典用于此项目(&U)"
 
 #: ldd_consts.sapplicationfilter
 msgid "Applications|*"
@@ -123,36 +123,28 @@ msgstr "应用程序|*"
 #: ldd_consts.sapplyingddtodataset
 #, object-pascal-format
 msgid "Applying data dictionary to dataset %s"
-msgstr "应用数据字典到dataset%s"
+msgstr "将数据字典应用到数据集 %s"
 
 #: ldd_consts.sapplyingddtofield
 #, object-pascal-format
 msgid "Applying data dictionary to field %s"
-msgstr "应用数据字典到字段%s"
+msgstr "将数据字典应用到字段 %s"
 
 #: ldd_consts.serrnodatadesktopdoselect
-#, fuzzy
-#| msgid ""
-#| "Could not locate the database desktop application.\n"
-#| "Would you like to select it ?\n"
 msgid ""
 "Could not locate the database desktop application.\n"
 "Would you like to select it ?"
 msgstr ""
-"不能定位database桌面应用.\n"
-"你想要选择它吗?\n"
+"无法定位数据库桌面应用程序\n"
+"您是否要选择它"
 
 #: ldd_consts.serrnodatadictactive
-#, fuzzy
-#| msgid ""
-#| "No datadictionary active.\n"
-#| "Please set a data dictionary for the project\n"
 msgid ""
 "No datadictionary active.\n"
 "Please set a data dictionary for the project"
 msgstr ""
-"没有数据字典激活.\n"
-"请为该工程设置数据字典\n"
+"没有活动的数据字典。\n"
+"请为项目设置数据字典。"
 
 #: ldd_consts.serrselectdd
 msgid "Please select a known data dictionary"
@@ -164,7 +156,7 @@ msgstr "请选择一个存在的目录"
 
 #: ldd_consts.serrselectexe
 msgid "Please select an existing database desktop application"
-msgstr "请选择一个存在的database桌面应用"
+msgstr "请选择现有的数据库桌面应用程序"
 
 #: ldd_consts.serrselectfile
 msgid "Please select an existing data dictionary file"
@@ -172,11 +164,11 @@ msgstr "请选择一个存在的数据字典文件"
 
 #: ldd_consts.sfromfile
 msgid "from file: "
-msgstr "从文件:"
+msgstr "来自文件："
 
 #: ldd_consts.sloadingdatadict
 msgid "Loading data dictionary "
-msgstr "加载data字典"
+msgstr "加载数据字典"
 
 #: ldd_consts.smenuconfdatadict
 msgid "Configuration"
@@ -184,11 +176,11 @@ msgstr "配置"
 
 #: ldd_consts.smenuconfprojdatadict
 msgid "Set ..."
-msgstr "设置..."
+msgstr "设置 ..."
 
 #: ldd_consts.smenudatadesktop
 msgid "Database Desktop"
-msgstr "Database桌面"
+msgstr "数据库桌面"
 
 #: ldd_consts.smenudatadict
 msgid "Data dictionary"
@@ -200,11 +192,11 @@ msgstr "应用"
 
 #: ldd_consts.smenudatadictcreatecode
 msgid "Create code from dataset"
-msgstr "从dataset创建代码"
+msgstr "从数据集创建代码"
 
 #: ldd_consts.smenudatadictdesignsql
 msgid "Design SQL"
-msgstr "设计SQL"
+msgstr "设计 SQL"
 
 #: ldd_consts.smenuopendatadict
 msgid "Open"
@@ -212,15 +204,15 @@ msgstr "打开"
 
 #: ldd_consts.snotyetimplemted
 msgid "Not yet implemented"
-msgstr "Not yet implemented(尚未实现)"
+msgstr "尚未实现"
 
 #: ldd_consts.swarningnoddforfield
 #, object-pascal-format
 msgid "Warning: No definition in data dictionary for field %s"
-msgstr "警告:没有定义在数据字典对于字段%s"
+msgstr "警告：字段 %s 在数据字典中没有定义"
 
 #: ldd_consts.swrongselection
 #, object-pascal-format
 msgid "Wrong selection count : %d"
-msgstr "错误的选择计数:%d"
+msgstr "选择数量错误 : %d"
 
