--- a/components/exampleswindow/languages/uconst.zh_CN.po
+++ b/components/exampleswindow/languages/uconst.zh_CN.po
@@ -2,14 +2,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: \n"
+"PO-Revision-Date: 2025-05-21 22:08+0800\n"
 "Last-Translator: ACTom <i@actom.me>\n"
 "Language-Team: \n"
 "Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.3.2\n"
+"X-Generator: TyPoEditor 0.2\n"
 
 #: uconst.rsdefault
 msgid "Default"
@@ -57,7 +57,7 @@ msgstr "在浏览器中查看"
 
 #: uconst.rsexcopyingproject
 msgid "Copying Project ..."
-msgstr "正在复制项目……"
+msgstr "复制项目 ..."
 
 #: uconst.rsexdownloadingproject
 msgid "Downloading Project ..."
