--- a/components/jcf2/IdePlugin/lazarus/languages/jcfbaseconsts.zh_CN.po
+++ b/components/jcf2/IdePlugin/lazarus/languages/jcfbaseconsts.zh_CN.po
@@ -2,14 +2,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: X-1.9\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: \n"
-"Last-Translator: 郑建平@夏宗萍 aka  robsean <robsean@126.com>\n"
+"PO-Revision-Date: 2025-05-21 22:33+0800\n"
+"Last-Translator: ACTom <i@actom.me>\n"
 "Language-Team: \n"
 "Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.7.1\n"
+"X-Generator: TyPoEditor 0.2\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
 #: jcfbaseconsts.liserrorwritingsettingsexception
@@ -27,7 +27,7 @@ msgid "No settings found"
 msgstr "没有设置找到"
 
 #: jcfbaseconsts.listhesettingsfiledoesnotexist
-#, object-pascal-format
+#, object-pascal-format, fuzzy, badformat
 msgid "The settings file \"%s\" does not exist.%sThe formatter will work better if it is configured to use a valid settings file"
-msgstr ""
+msgstr "设置文件 \"%s\" 不存在。格式化程序如果配置为使用有效的设置文件将表现得更好。"
 
