--- a/components/onlinepackagemanager/languages/opkman_const.zh_CN.po
+++ b/components/onlinepackagemanager/languages/opkman_const.zh_CN.po
@@ -2,14 +2,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: X-1.9\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: \n"
+"PO-Revision-Date: 2025-05-21 23:28+0800\n"
 "Last-Translator: ACTom <i@actom.me>\n"
 "Language-Team: \n"
 "Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.3.2\n"
+"X-Generator: TyPoEditor 0.2\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
 #: opkman_const.rsaddrepositorypackagefrm_bcancel_caption
@@ -878,10 +878,9 @@ msgid "Help"
 msgstr "帮助"
 
 #: opkman_const.rsmainfrm_tbhelp_hint
-#, object-pascal-format, fuzzy, badformat
-#| msgid "Help (http://wiki.freepascal.org/Online_Package_Manager)"
+#, object-pascal-format
 msgid "Help (%s)"
-msgstr "帮助（http://wiki.freepascal.org/Online_Package_Manager）"
+msgstr "帮助 (%s)"
 
 #: opkman_const.rsmainfrm_tbinstall_caption
 msgid "Install"
@@ -1100,191 +1099,139 @@ msgid "Cryptography"
 msgstr "密码学"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory10
-#, fuzzy
-#| msgid "Indicators and Gauges"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory10"
 msgid "Grids"
-msgstr "指示器和仪表"
+msgstr "网格"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory11
-#, fuzzy
-#| msgid "Labels"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory11"
 msgid "Indicators and Gauges"
-msgstr "标签"
+msgstr "指示器和仪表"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory12
-#, fuzzy
-#| msgid "LazIDEPlugins"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory12"
 msgid "Labels"
-msgstr "Lazarus IDE 插件"
+msgstr "标签"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory13
-#, fuzzy
-#| msgid "List and Combo Boxes"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory13"
 msgid "LazIDEPlugins"
-msgstr "列表和组合框"
+msgstr "LazIDE 插件"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory14
-#, fuzzy
-#| msgid "ListViews and TreeViews"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory14"
 msgid "List and Combo Boxes"
-msgstr "列表视图和树视图"
+msgstr "列表框和组合框"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory15
-#, fuzzy
-#| msgid "Menus"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory15"
 msgid "ListViews and TreeViews"
-msgstr "菜单"
+msgstr "列表视图和树视图"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory16
-#, fuzzy
-#| msgid "Multimedia"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory16"
 msgid "Menus"
-msgstr "多媒体"
+msgstr "菜单"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory17
-#, fuzzy
-#| msgid "Networking"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory17"
 msgid "Multimedia"
-msgstr "网络"
+msgstr "多媒体"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory18
-#, fuzzy
-#| msgid "Panels"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory18"
 msgid "Networking"
-msgstr "面板"
+msgstr "网络"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory19
-#, fuzzy
-#| msgid "Reporting"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory19"
 msgid "Panels"
-msgstr "报告"
+msgstr "面板"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory2
-#, fuzzy
-#| msgid "DataControls"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory2"
 msgid "Database"
-msgstr "数据控件"
+msgstr "数据库"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory20
-#, fuzzy
-#| msgid "Science"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory20"
 msgid "Reporting"
-msgstr "科学"
+msgstr "报告"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory21
-#, fuzzy
-#| msgid "Security"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory21"
 msgid "Science"
-msgstr "安全"
+msgstr "科学"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory22
-#, fuzzy
-#| msgid "Shapes"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory22"
 msgid "Security"
-msgstr "形状"
+msgstr "安全"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory23
-#, fuzzy
-#| msgid "Sizers and Scrollers"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory23"
 msgid "Shapes"
-msgstr "尺寸调节器和滚动器"
+msgstr "形状"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory24
-#, fuzzy
-#| msgid "System"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory24"
 msgid "Sizers and Scrollers"
-msgstr "系统"
+msgstr "大小调整器和滚动条"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory25
-#, fuzzy
-#| msgid "Tabbed Components"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory25"
 msgid "System"
-msgstr "标签化组件"
+msgstr "系统"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory26
-#, fuzzy
-#| msgid "Other"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory26"
 msgid "Tabbed Components"
-msgstr "其他"
+msgstr "选项卡组件"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory27
-#, fuzzy
-#| msgid "Games and Game Engines"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory27"
 msgid "Other"
-msgstr "游戏和游戏引擎"
+msgstr "其他"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory28
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory28"
 msgid "Games and Game Engines"
-msgstr ""
+msgstr "游戏和 游戏引擎"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory3
-#, fuzzy
-#| msgid "Date and Time"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory3"
 msgid "DataControls"
-msgstr "日期和时间"
+msgstr "数据控件"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory4
-#, fuzzy
-#| msgid "Dialogs"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory4"
 msgid "Date and Time"
-msgstr "对话框"
+msgstr "日期和时间"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory5
-#, fuzzy
-#| msgid "Edit and Memos"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory5"
 msgid "Dialogs"
-msgstr "文本编辑框"
+msgstr "对话框"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory6
-#, fuzzy
-#| msgid "Files and Drives"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory6"
 msgid "Edit and Memos"
-msgstr "文件和驱动器"
+msgstr "编辑和备忘录"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory7
-#, fuzzy
-#| msgid "GUIContainers"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory7"
 msgid "Files and Drives"
-msgstr "界面容器"
+msgstr "文件和磁盘"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory8
-#, fuzzy
-#| msgid "Graphics"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory8"
 msgid "GUIContainers"
-msgstr "图像"
+msgstr "GUI 容器"
 
 #: opkman_const.rsmainfrm_vsttext_packagecategory9
-#, fuzzy
-#| msgid "Grids"
 msgctxt "opkman_const.rsmainfrm_vsttext_packagecategory9"
 msgid "Graphics"
-msgstr "网格"
+msgstr "图形"
 
 #: opkman_const.rsmainfrm_vsttext_packageinfo
 msgid "Package info"
