--- a/components/packagetabs/languages/packagetabsstr.zh_CN.po
+++ b/components/packagetabs/languages/packagetabsstr.zh_CN.po
@@ -4,18 +4,18 @@ msgstr ""
 "Plural-Forms: nplurals=1; plural=0;\n"
 "Project-Id-Version: X-1.6\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: \n"
-"Last-Translator: 郑建平@夏宗萍 aka  robsean  <robsean@126.com>\n"
+"PO-Revision-Date: 2025-05-21 23:28+0800\n"
+"Last-Translator: ACTom <i@actom.me>\n"
 "Language-Team: http://www.microsystem.studio\n"
 "MIME-Version: 1.0\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: zh_CN\n"
-"X-Generator: Poedit 1.8.7.1\n"
+"X-Generator: TyPoEditor 0.2\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
 #: packagetabsstr.saddtoproject
 msgid "Add To Project"
-msgstr "添加到工程"
+msgstr "添加到项目"
 
 #: packagetabsstr.scloneto
 msgid "Clone To"
@@ -23,7 +23,7 @@ msgstr "克隆到"
 
 #: packagetabsstr.scloseall
 msgid "Close All"
-msgstr ""
+msgstr "关闭所有"
 
 #: packagetabsstr.scopyfilepathtoclipboard
 msgid "Copy File Path To Clipboard"
@@ -43,7 +43,7 @@ msgstr "新建窗口"
 
 #: packagetabsstr.sopenpackage
 msgid "Open package"
-msgstr "打开包"
+msgstr "打开软件包"
 
 #: packagetabsstr.sother
 msgid "Other"
