--- a/components/pochecker/languages/pocheckerconsts.zh_CN.po
+++ b/components/pochecker/languages/pocheckerconsts.zh_CN.po
@@ -3,13 +3,13 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: X-1.9\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: \n"
-"Last-Translator: 郑建平@夏宗萍 aka  robsean <robsean@126.com>\n"
+"PO-Revision-Date: 2025-05-21 23:34+0800\n"
+"Last-Translator: ACTom <i@actom.me>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: zh_CN\n"
-"X-Generator: Poedit 1.8.7.1\n"
+"X-Generator: TyPoEditor 0.2\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
 #: pocheckerconsts.rspochecker
@@ -34,7 +34,7 @@ msgstr "西班牙语"
 
 #: pocheckerconsts.rs_lang_co
 msgid "Corsican"
-msgstr ""
+msgstr "科西嘉语"
 
 #: pocheckerconsts.rs_lang_cs
 msgid "Czech"
@@ -106,7 +106,7 @@ msgstr "俄罗斯语"
 
 #: pocheckerconsts.rs_lang_si
 msgid "Sinhala"
-msgstr ""
+msgstr "辛哈拉语"
 
 #: pocheckerconsts.rs_lang_sk
 msgid "Slovak"
@@ -138,10 +138,8 @@ msgid "Check for incompatible format arguments"
 msgstr "检查不兼容格式参数"
 
 #: pocheckerconsts.scheckformismatchesinuntranslatedstrings
-#, fuzzy
-#| msgid "Check for mismatches in untranslated strings"
 msgid "Check for mismatches of originals"
-msgstr "检查不匹配在未翻译的字符串"
+msgstr "检查原件是否匹配"
 
 #: pocheckerconsts.scheckmissingidentifiers
 msgid "Check missing identifiers"
@@ -157,12 +155,12 @@ msgstr "清理"
 
 #: pocheckerconsts.scopy
 msgid "&Copy"
-msgstr ""
+msgstr "复制(&C)"
 
 #: pocheckerconsts.screatingiconxofy
-#, object-pascal-format, fuzzy, badformat
+#, object-pascal-format
 msgid "Creating icon nr. %d of %d"
-msgstr "创建icon nr. %d关于%"
+msgstr "正在创建图标 %d 共 %d"
 
 #: pocheckerconsts.scurrenttest
 #, object-pascal-format
@@ -175,14 +173,13 @@ msgid "[Line %d] %s"
 msgstr "[行: %d]%s"
 
 #: pocheckerconsts.sduplicateoriginals
-#, object-pascal-format, fuzzy
-#| msgid "The (untranslated) value \"%s\" is used for more than 1 entry:"
+#, object-pascal-format
 msgid "Original value \"%s\" is used for more than 1 entry:"
-msgstr "该(未翻译)值\"%s\" 被用于超过1个记录:"
+msgstr "原始值 \"%s\" 被用于多个条目："
 
 #: pocheckerconsts.sduplicateoriginalstab
 msgid "Duplicate Originals"
-msgstr ""
+msgstr "复制原始"
 
 #: pocheckerconsts.serrorsbytest
 #, object-pascal-format
@@ -192,32 +189,29 @@ msgstr "错误/警告被报告由%s关于:"
 #: pocheckerconsts.sfile
 #, object-pascal-format
 msgid "File %s"
-msgstr ""
+msgstr "文件 %s"
 
 #: pocheckerconsts.sfilesnotfoundandremoved
-#, object-pascal-format, fuzzy
-#| msgid ""
-#| "The following non-existent files were removed from the list:\n"
-#| "%s\n"
+#, object-pascal-format
 msgid ""
 "The following non-existent files were removed from the list:\n"
 "%s"
 msgstr ""
-"下面不存在文件被移除从列表:\n"
-"%s\n"
+"以下不存在的文件已被从列表中移除：\n"
+"%s"
 
 #: pocheckerconsts.sfuzzystrings
 msgid "Fuzzy strings"
-msgstr ""
+msgstr "模糊字符串"
 
 #: pocheckerconsts.sfuzzystringstotal
 #, object-pascal-format
 msgid "Fuzzy strings (total: %s)"
-msgstr "模糊的(Fuzzy)字符串(总计:%s)"
+msgstr "模糊字符串（总数： %s）"
 
 #: pocheckerconsts.sgeneralinfo
 msgid "General Info"
-msgstr ""
+msgstr "常规信息"
 
 #: pocheckerconsts.sgrapstatformcaption
 msgid "Graphical summary"
@@ -225,25 +219,25 @@ msgstr "图形化概要"
 
 #: pocheckerconsts.sguipofilecheckingtool
 msgid "GUI Po-file checking tool"
-msgstr "GUI Po-文件检查工具"
+msgstr "GUI Po文件检查工具"
 
 #: pocheckerconsts.sidentifiernotfoundin
 #, object-pascal-format
 msgid "Identifier [%s] not found in %s"
-msgstr "标识符[%s]未找到在%s"
+msgstr "标识符 [%s] 在 %s 中未找到"
 
 #: pocheckerconsts.sincompatibleformatargs
 #, object-pascal-format
 msgid "[Line: %d] Incompatible and/or invalid format() arguments for:"
-msgstr "[行: %d]不兼容 和/或 无效format()参数对于:"
+msgstr "[行：%d] 不兼容和/或无效的 format() 参数："
 
 #: pocheckerconsts.slanguage
 msgid "Language:"
-msgstr ""
+msgstr "语言："
 
 #: pocheckerconsts.slastsearchpath
 msgid "Last search path:"
-msgstr ""
+msgstr "上次搜索路径："
 
 #: pocheckerconsts.slineinfilename
 #, object-pascal-format
@@ -258,7 +252,7 @@ msgstr "[行: %d]"
 #: pocheckerconsts.smissingmasteridentifier
 #, object-pascal-format
 msgid "Identifier [%s] found in %s, but it does not exist in %s"
-msgstr "标识符[%s]找到在%s,但是它在%s中不存在"
+msgstr "标识符 [%s] 在 %s 中找到，但在 %s 中不存在"
 
 #: pocheckerconsts.snotestselected
 msgid "There are no tests selected."
@@ -271,63 +265,54 @@ msgstr "注意:翻译是模糊不清的"
 #: pocheckerconsts.snrerrorsfound
 #, object-pascal-format
 msgid "Found %d errors."
-msgstr "发现%d错误."
+msgstr "发现 %d 个错误。"
 
 #: pocheckerconsts.snrofitemsmismatch
 msgid "Mismatch in number of items for master and child"
-msgstr "不匹配的主项和子项的项目的数字"
+msgstr "主项和子项的数量不匹配"
 
 #: pocheckerconsts.snrofitemsmismatchd
 #, object-pascal-format
 msgid "%s: %d items"
-msgstr "%s: %d项目"
+msgstr "%s: %d 项"
 
 #: pocheckerconsts.snrwarningsfound
 #, object-pascal-format
 msgid "Found %d warnings."
-msgstr "找到%d警告."
+msgstr "发现%d个警告。"
 
 #: pocheckerconsts.sopenfail
-#, object-pascal-format, fuzzy
-#| msgid ""
-#| "Unable to open file:\n"
-#| "\"%s\"\n"
+#, object-pascal-format
 msgid ""
 "Unable to open file:\n"
 "\"%s\""
 msgstr ""
-"不能打开文件:\n"
-"\"%s\"\n"
+"无法打开文件：\n"
+"\"%s\""
 
 #: pocheckerconsts.sopenfailexternal
-#, object-pascal-format, fuzzy
-#| msgid ""
-#| "Unable to open file\n"
-#| "\"%s\"\n"
-#| "in external editor\n"
-#| "\"%s\"\n"
+#, object-pascal-format
 msgid ""
 "Unable to open file\n"
 "\"%s\"\n"
 "in external editor\n"
 "\"%s\""
 msgstr ""
-"不能打开文件:\n"
+"无法在外部编辑器中打开文件\n"
 "\"%s\"\n"
-"在外部编辑器:\n"
-"\"%s\"?\n"
+"\"%s\""
 
 #: pocheckerconsts.sopenfileinexternaleditor
 msgid "Open file in external editor"
-msgstr "打开文件在外部编辑器"
+msgstr "在外部编辑器中打开文件"
 
 #: pocheckerconsts.sopenfileinideeditor
 msgid "Open file in IDE editor"
-msgstr "打开文件在IDE编辑器"
+msgstr "在 IDE 编辑器中打开文件"
 
 #: pocheckerconsts.sopenfileinsystempoeditor
 msgid "Open file in system PO editor"
-msgstr "打开文件在系统PO 编辑器"
+msgstr "在系统 PO 编辑器中打开文件"
 
 #: pocheckerconsts.soriginal
 msgid "Original"
@@ -336,34 +321,34 @@ msgstr "原始"
 #: pocheckerconsts.spercfuzzy
 #, object-pascal-format
 msgid "%s: %5.1f%% fuzzy strings."
-msgstr "%s:%5.1f%%模糊不清的字符串."
+msgstr "%s： %5.1f%% 模糊字符串。"
 
 #: pocheckerconsts.sperctranslated
 #, object-pascal-format
 msgid "%s: %5.1f%% translated strings."
-msgstr "%s:%5.1f%%已翻译的字符串."
+msgstr "%s: %5.1f%% 翻译的字符串。"
 
 #: pocheckerconsts.spercuntranslated
 #, object-pascal-format
 msgid "%s: %5.1f%% untranslated strings."
-msgstr "%s:%5.1f%%未翻译的字符串."
+msgstr "%s: %5.1f%% 未翻译的字符串。"
 
 #: pocheckerconsts.sprocessingtranslationfamily
 msgid "Processing translation family..."
-msgstr "处理(Processing)翻译家族..."
+msgstr "处理翻译家族..."
 
 #: pocheckerconsts.sprocessingtranslationfamilyof
 #, object-pascal-format
 msgid "Processing translation family %s of %s"
-msgstr "处理(Processing)翻译家族%s属于(of) %s"
+msgstr "处理 %s 的翻译系列 %s"
 
 #: pocheckerconsts.srefreshalltranslationfamilies
 msgid "Refresh all translation families"
-msgstr "刷新所有翻译家族"
+msgstr "刷新所有翻译系列"
 
 #: pocheckerconsts.srefreshcurrenttranslationfamily
 msgid "Refresh current translation family"
-msgstr "刷新当前翻译家族"
+msgstr "刷新当前翻译系列"
 
 #: pocheckerconsts.sresults
 msgid "Results"
@@ -375,19 +360,16 @@ msgstr "运行选择的测试(&R)"
 
 #: pocheckerconsts.ssaveas
 msgid "Save &As ..."
-msgstr ""
+msgstr "另存为(&A) ..."
 
 #: pocheckerconsts.ssaveerror
-#, object-pascal-format, fuzzy
-#| msgid ""
-#| "Error saving file:\n"
-#| "%s\n"
+#, object-pascal-format
 msgid ""
 "Error saving file:\n"
 "%s"
 msgstr ""
-"错误保存文件:\n"
-"%s\n"
+"保存文件时出错：\n"
+"%s"
 
 #: pocheckerconsts.sscandir
 msgid "Scan a folder"
@@ -407,7 +389,7 @@ msgstr "全选(&A)"
 
 #: pocheckerconsts.sselectedtranslationsarenotavailable
 msgid "Selected translations are not available."
-msgstr ""
+msgstr "所选翻译不可用。"
 
 #: pocheckerconsts.sselecttesttypes
 msgid "Select test types"
@@ -418,91 +400,82 @@ msgid "Show statistics graph"
 msgstr "显示统计图"
 
 #: pocheckerconsts.sstathint
-#, object-pascal-format, fuzzy
-#| msgid ""
-#| "Translated: %d (%.1f%%)\n"
-#| "Untranslated: %d (%.1f%%)\n"
-#| "Fuzzy: %d (%.1f%%)\n"
-#| "Errors in selected tests: %d\n"
+#, object-pascal-format
 msgid ""
 "Translated: %d (%.1f%%)\n"
 "Untranslated: %d (%.1f%%)\n"
 "Fuzzy: %d (%.1f%%)\n"
 "Errors in selected tests: %d"
 msgstr ""
-"翻译的: %d (%.1f%%)\n"
-"未翻译的: %d (%.1f%%)\n"
-"模糊的(Fuzzy): %d (%.1f%%)\n"
-"错误在选择的测试中: %d\n"
+"已翻译： %d (%.1f%%)\n"
+"未翻译： %d (%.1f%%)\n"
+"模糊： %d (%.1f%%)\n"
+"选中测试中的错误： %d"
 
 #: pocheckerconsts.sthefollowingmissingmasterpofileswereremoved
 #, object-pascal-format
 msgid "The following %s missing master .po file(s) were removed from the list:"
-msgstr "下面的%s缺少主要的.po文件 将被移除从该列表:"
+msgstr "以下 %s 缺失的主 .po 文件已从列表中移除："
 
 #: pocheckerconsts.sthefollowingorphanedpofilesfound
 #, object-pascal-format
 msgid "The following %s orphaned .po file(s) found:"
-msgstr "下面%s孤立的.po文件找到:"
+msgstr "以下 %s 孤儿 .po 文件:"
 
 #: pocheckerconsts.stotalerrors
-#, object-pascal-format, fuzzy
-#| msgid "Total errors found: %d"
+#, object-pascal-format
 msgid "Total errors: %d"
-msgstr "全部错误找到:%d"
+msgstr "总错误数：%d"
 
 #: pocheckerconsts.stotalerrorsnonfuzzy
 #, object-pascal-format
 msgid "Total errors: %d (formatting errors in non-fuzzy strings: %d)"
-msgstr ""
+msgstr "总错误数：%d（非模糊字符串中的格式错误：%d）"
 
 #: pocheckerconsts.stotalfuzzystrings
 #, object-pascal-format
 msgid "Total fuzzy strings: %s"
-msgstr "全部模糊不清的字符串: %s"
+msgstr "模糊字符串总数：%s"
 
 #: pocheckerconsts.stotaltranslatedstrings
 #, object-pascal-format
 msgid "Total translated strings: %s (%.1f%%)"
-msgstr "总计翻译的字符串: %s (%.1f%%)"
+msgstr "已翻译的字符串总数：%s (%.1f%%)"
 
 #: pocheckerconsts.stotaluntranslatedstrings
 #, object-pascal-format
 msgid "Total untranslated strings: %s"
-msgstr "全部未翻译的字符串: %s"
+msgstr "未翻译的字符串总数： %s"
 
 #: pocheckerconsts.stotalwarnings
-#, object-pascal-format, fuzzy
-#| msgid "Total warnings found: %d"
+#, object-pascal-format
 msgid "Total warnings: %d"
-msgstr "全部警告找到:%d"
+msgstr "总警告： %d"
 
 #: pocheckerconsts.stranslatedstrings
 msgid "Translated strings"
-msgstr ""
+msgstr "已翻译的字符串"
 
 #: pocheckerconsts.stranslatedstringstotal
 #, object-pascal-format
 msgid "Translated strings (total: %s [%.1f%%])"
-msgstr "翻译的字符串(总计: %s [%.1f%%)"
+msgstr "已翻译的字符串（总数：%s [%.1f%%]）"
 
 #: pocheckerconsts.stranslation
 msgid "Translation"
 msgstr "翻译"
 
 #: pocheckerconsts.stranslationstatistics
-#, fuzzy
-#| msgid "Translation statistics per language:"
 msgid "Translation Statistics"
-msgstr "翻译统计每种语言:"
+msgstr "翻译统计"
 
 #: pocheckerconsts.stroublesomefiles
 msgid "Troublesome files"
-msgstr "麻烦的(Troublesome)文件"
+msgstr "问题文件"
 
 #: pocheckerconsts.sunselectalltests
 msgid "&Unselect All"
-msgstr "不选择所有(&U)"
+msgstr "取消全选(&U)"
 
 #: pocheckerconsts.sunselectlistbox
 msgid "Unselect all files"
@@ -510,10 +483,10 @@ msgstr "不选择所有文件"
 
 #: pocheckerconsts.suntranslatedstrings
 msgid "Untranslated strings"
-msgstr ""
+msgstr "未翻译的字符串"
 
 #: pocheckerconsts.suntranslatedstringstotal
 #, object-pascal-format
 msgid "Untranslated strings (total: %s)"
-msgstr "未翻译的字符串(总计:%s)"
+msgstr "未翻译的字符串（总数：%s）"
 
