--- a/components/projectgroups/languages/projectgroupstrconst.zh_CN.po
+++ b/components/projectgroups/languages/projectgroupstrconst.zh_CN.po
@@ -2,14 +2,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: X-1.9\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: \n"
+"PO-Revision-Date: 2025-05-21 23:36+0800\n"
 "Last-Translator: ACTom <i@actom.me>\n"
 "Language-Team: \n"
 "Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.3.2\n"
+"X-Generator: TyPoEditor 0.2\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
 #: projectgroupstrconst.lisabort
@@ -313,14 +313,13 @@ msgid "New project group"
 msgstr "新建项目组"
 
 #: projectgroupstrconst.lisprojectgroupopencaption
-#, fuzzy
 msgctxt "projectgroupstrconst.lisprojectgroupopencaption"
 msgid "Open"
 msgstr "打开"
 
 #: projectgroupstrconst.lisprojectgroupopenhint
 msgid "Open project group"
-msgstr ""
+msgstr "打开项目组"
 
 #: projectgroupstrconst.lisprojectgroupreload
 msgid "Reload"
@@ -428,7 +427,7 @@ msgstr "编译清理"
 
 #: projectgroupstrconst.listargetcompilecleanfromhere
 msgid "Compile clean from here"
-msgstr ""
+msgstr "从这里清理编译"
 
 #: projectgroupstrconst.listargetcompilecleanhint
 msgid "Compile selected target clean"
