--- a/components/sqlite/languages/sqlitecompstrings.zh_CN.po
+++ b/components/sqlite/languages/sqlitecompstrings.zh_CN.po
@@ -3,13 +3,13 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: X-1.9\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: \n"
-"Last-Translator: 郑建平@夏宗萍 aka  robsean <robsean@126.com>\n"
+"PO-Revision-Date: 2025-05-21 23:41+0800\n"
+"Last-Translator: ACTom <i@actom.me>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: zh_CN\n"
-"X-Generator: Poedit 1.8.7.1\n"
+"X-Generator: TyPoEditor 0.2\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
 #: sqlitecompstrings.sadd
@@ -19,7 +19,7 @@ msgstr "添加"
 #: sqlitecompstrings.satablenamedalreadyexistsareyousureyouwanttoreplace
 #, object-pascal-format
 msgid "A Table named \"%s\" already exists. Are you sure you want to replace this table?%sAll data stored will be lost."
-msgstr "一个Table名为\"%s\"已经存在.你确定想替换这个table?%s所有data存储将丢失"
+msgstr "名为 \"%s\" 的表已经存在。您确定要替换此表吗？%s所有存储的数据都将丢失。"
 
 #: sqlitecompstrings.sclose
 msgid "Close"
@@ -27,11 +27,11 @@ msgstr "关闭"
 
 #: sqlitecompstrings.screateedittable
 msgid "Create/Edit Table"
-msgstr "创建/编辑Table"
+msgstr "创建/编辑表"
 
 #: sqlitecompstrings.screatetable
 msgid "Create Table"
-msgstr "创建Table"
+msgstr "创建表"
 
 #: sqlitecompstrings.sdelete
 msgid "Delete"
@@ -47,39 +47,39 @@ msgstr "字段类型"
 
 #: sqlitecompstrings.sfilenamenotsetitsnotpossibletocreateeditatable
 msgid "File name not set: it's not possible to create/edit a table."
-msgstr "文件名没有设置:它不能创建/编辑table."
+msgstr "文件名未设置：无法创建或编辑表格。"
 
 #: sqlitecompstrings.sfilepath
 #, object-pascal-format
 msgid "File Path: %s"
-msgstr "文件路径: %s"
+msgstr "文件路径：%s"
 
 #: sqlitecompstrings.sitsnotallowedfieldswiththesamename
 msgid "Fields with identical names are not allowed."
-msgstr "带有相同名称的字段不被允许"
+msgstr "不允许存在名称相同的字段。"
 
 #: sqlitecompstrings.sitwasnotpossibletocreatethetable
 msgid "It was not possible to create the table."
-msgstr "不能创建table."
+msgstr "无法创建表。"
 
 #: sqlitecompstrings.snofieldsaddedtablewillnotbecreated
 msgid "No fields added. Table will not be created."
-msgstr "没有字段添加.Table将不被创建."
+msgstr "未添加字段。表将不会被创建。"
 
 #: sqlitecompstrings.stablecreatedsuccessfully
 msgid "Table created successfully."
-msgstr "Table成功地创建"
+msgstr "表创建成功。"
 
 #: sqlitecompstrings.stableeditorfieldtypenotrecognized
 msgid "Field type not recognized."
-msgstr "字段类型不识别"
+msgstr "字段类型无法识别。"
 
 #: sqlitecompstrings.stablename
 #, object-pascal-format
 msgid "Table Name: %s"
-msgstr "Table名称: %s"
+msgstr "表名: %s"
 
 #: sqlitecompstrings.stablenamenotsetitsnotpossibletocreateeditatable
 msgid "Table name not set: it's not possible to create/edit a table."
-msgstr "Table名称没有设置: 不能创建/编辑table."
+msgstr "表名未设置：无法创建或编辑表。"
 
