--- a/components/tdbf/languages/registerdbf.zh_CN.po
+++ b/components/tdbf/languages/registerdbf.zh_CN.po
@@ -2,17 +2,17 @@ msgid ""
 msgstr ""
 "Project-Id-Version: X\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2017-12-01 22:53+0800\n"
-"Last-Translator: 郑建平@夏宗萍 aka  robsean  <robsean@126.com>\n"
+"PO-Revision-Date: 2025-05-21 23:58+0800\n"
+"Last-Translator: ACTom <i@actom.me>\n"
 "Language-Team: http://www.microsystem.studio\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "Language: zh_CN\n"
-"X-Generator: Poedit 1.8.7.1\n"
+"X-Generator: TyPoEditor 0.2\n"
 
 #: registerdbf.dbfsalldbasefiles
 msgid "DBase Files"
-msgstr "DBase文件"
+msgstr "DBase 文件"
 
