--- a/components/todolist/languages/todoliststrconsts.zh_CN.po
+++ b/components/todolist/languages/todoliststrconsts.zh_CN.po
@@ -2,31 +2,31 @@ msgid ""
 msgstr ""
 "Project-Id-Version: X-1.9\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: \n"
+"PO-Revision-Date: 2025-05-21 23:59+0800\n"
 "Last-Translator: ACTom <i@actom.me>\n"
 "Language-Team: \n"
 "Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.3.2\n"
+"X-Generator: TyPoEditor 0.2\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
 #: todoliststrconsts.attribgroupname
 msgid "ToDo comments"
-msgstr ""
+msgstr "待办注释"
 
 #: todoliststrconsts.attribnamedone
 msgid "Done comment"
-msgstr ""
+msgstr "完成注释"
 
 #: todoliststrconsts.attribnamenote
 msgid "Note comment"
-msgstr ""
+msgstr "注释评论"
 
 #: todoliststrconsts.attribnametodo
 msgid "ToDo comment"
-msgstr ""
+msgstr "待办注释"
 
 #: todoliststrconsts.dlgfiltercsv
 msgid "CSV files"
