--- a/components/virtualtreeview/languages/laz.virtualtrees.zh_CN.po
+++ b/components/virtualtreeview/languages/laz.virtualtrees.zh_CN.po
@@ -3,44 +3,44 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: X-1.9\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: \n"
-"Last-Translator: 郑建平@夏宗萍 aka  robsean <robsean@126.com>\n"
+"PO-Revision-Date: 2025-05-22 00:05+0800\n"
+"Last-Translator: ACTom <i@actom.me>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: zh_CN\n"
-"X-Generator: Poedit 1.8.7.1\n"
+"X-Generator: TyPoEditor 0.2\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
 #: laz.virtualtrees.scannotsetuserdata
 msgid "Cannot set initial user data because there is not enough user data space allocated."
-msgstr "不能设置初始化用户数据 因为这里没有足够的用户数据空间被分配."
+msgstr "无法设置初始用户数据因为分配的用户数据空间不足。"
 
 #: laz.virtualtrees.sclipboardfailed
 msgid "Clipboard operation failed."
-msgstr "剪贴板操作失败."
+msgstr "剪贴板操作失败。"
 
 #: laz.virtualtrees.scorruptstream1
 msgid "Stream data corrupt. A node's anchor chunk is missing."
-msgstr "流数据损坏.一个节点的锚/固定chunk(块)丢失."
+msgstr "流数据损坏。某个节点的锚定块缺失。"
 
 #: laz.virtualtrees.scorruptstream2
 msgid "Stream data corrupt. Unexpected data after node's end position."
-msgstr "流数据损坏.意外数据在节点的end位置"
+msgstr "流数据损坏。节点结束位置后出现意外数据。"
 
 #: laz.virtualtrees.sstreamtoosmall
 msgid "Unable to load tree structure, not enough data available."
-msgstr "不能加载树结构,没有足够的数据可用"
+msgstr "无法加载树形结构，数据不足。"
 
 #: laz.virtualtrees.swrongmoveerror
 msgid "Target node cannot be a child node of the node to be moved."
-msgstr "目标(Target)节点不能是一个将被移动节点的子节点"
+msgstr "目标节点不能是待移动节点的子节点。"
 
 #: laz.virtualtrees.swrongstreamformat
 msgid "Unable to load tree structure, the format is wrong."
-msgstr "不能加载树结构,该格式是错误的"
+msgstr "无法加载树形结构，格式错误。"
 
 #: laz.virtualtrees.swrongstreamversion
 msgid "Unable to load tree structure, the version is unknown."
-msgstr "不能加载树结构,该版本是未知的"
+msgstr "无法加载树结构，版本未知。"
 
