--- a/components/virtualtreeview/languages/laz.vtheaderpopup.zh_CN.po
+++ b/components/virtualtreeview/languages/laz.vtheaderpopup.zh_CN.po
@@ -3,16 +3,16 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: X-1.9\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: \n"
-"Last-Translator: 郑建平@夏宗萍 aka  robsean <robsean@126.com>\n"
+"PO-Revision-Date: 2025-05-22 00:05+0800\n"
+"Last-Translator: ACTom <i@actom.me>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: zh_CN\n"
-"X-Generator: Poedit 1.8.7.1\n"
+"X-Generator: TyPoEditor 0.2\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
 #: laz.vtheaderpopup.sresizetofit
 msgid "&Resize All Columns To Fit"
-msgstr "调整所有列为合适的(&R)"
+msgstr "调整所有列以适应(&R)"
 
