--- a/doceditor/languages/lazde.zh_CN.po
+++ b/doceditor/languages/lazde.zh_CN.po
@@ -3,13 +3,13 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: X-1.9\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: \n"
-"Last-Translator: 郑建平@夏宗萍 aka  robsean <robsean@126.com>\n"
+"PO-Revision-Date: 2025-05-21 21:17+0800\n"
+"Last-Translator: ACTom <i@actom.me>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: zh_CN\n"
-"X-Generator: Poedit 1.8.7.1\n"
+"X-Generator: TyPoEditor 0.2\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
 #: lazdemsg.saboutformcaption
@@ -60,11 +60,11 @@ msgstr "示例代码文件"
 
 #: lazdemsg.scopyright1
 msgid "This application is (c) by  Michael Van Canneyt and the Lazarus team"
-msgstr "这个应用程序是 (c) 由Michael Van Canneyt和Lazarus团队"
+msgstr "本应用程序由 Michael Van Canneyt 和 Lazarus 团队版权所有"
 
 #: lazdemsg.scopyright2
 msgid "It is released under the terms of the  GENERAL PUBLIC LICENSE:"
-msgstr "它是在\"GENERAL PUBLIC LICENSE\"限制下发布的"
+msgstr "它根据 通用公共许可证 的条款发布："
 
 #: lazdemsg.scpu
 msgid "CPU"
@@ -72,7 +72,7 @@ msgstr "CPU"
 
 #: lazdemsg.screatecontentfile
 msgid "Create cont&ent file"
-msgstr "创建目录文件(&e)"
+msgstr "创建内容文件(&E)"
 
 #: lazdemsg.sdataforelement
 #, object-pascal-format
@@ -91,7 +91,7 @@ msgstr "你真的想删除模块\"%s\"?"
 #: lazdemsg.sdeletepackage
 #, object-pascal-format
 msgid "Are you sure you want to delete package \"%s\" ?"
-msgstr "你真的想删除包\"%s\"?"
+msgstr "您确定要删除软件包 \"%s\" 吗？"
 
 #: lazdemsg.sdeletetopic
 #, object-pascal-format
