--- a/examples/translation/languages/translation_demo.zh_CN.po
+++ b/examples/translation/languages/translation_demo.zh_CN.po
@@ -3,13 +3,13 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: X-1.9\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: \n"
-"Last-Translator: 郑建平@夏宗萍 aka  robsean <robsean@126.com>\n"
+"PO-Revision-Date: 2025-05-22 00:12+0800\n"
+"Last-Translator: ACTom <i@actom.me>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: zh_CN\n"
-"X-Generator: Poedit 1.8.7.1\n"
+"X-Generator: TyPoEditor 0.2\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 
 #: stringsunit.rsbeer
@@ -19,50 +19,50 @@ msgstr "啤酒"
 
 #: stringsunit.rseight
 msgid "Eight"
-msgstr "8"
+msgstr "八"
 
 #: stringsunit.rsfive
 msgid "Five"
-msgstr "5"
+msgstr "五"
 
 #: stringsunit.rsfour
 msgid "Four"
-msgstr "4"
+msgstr "四"
 
 #: stringsunit.rsnine
 msgid "Nine"
-msgstr "9"
+msgstr "九"
 
 #: stringsunit.rsone
 msgid "One"
-msgstr "1"
+msgstr "一"
 
 #: stringsunit.rsseven
 msgid "Seven"
-msgstr "7"
+msgstr "七"
 
 #: stringsunit.rssix
 msgid "Six"
-msgstr "6"
+msgstr "六"
 
 #: stringsunit.rssumofselectednumbers
 #, object-pascal-format
 msgid "Sum of selected numbers: %s"
-msgstr "所选数字之和是: %s"
+msgstr "所选数字的和：%s"
 
 #: stringsunit.rsthree
 msgid "Three"
-msgstr "3"
+msgstr "三"
 
 #: stringsunit.rstodayis
 #, object-pascal-format
 msgctxt "stringsunit.rstodayis"
 msgid "Today is %s"
-msgstr "今天是%s"
+msgstr "今天是 %s"
 
 #: stringsunit.rstwo
 msgid "Two"
-msgstr "2"
+msgstr "二"
 
 #: stringsunit.rswater
 msgctxt "stringsunit.rswater"
@@ -78,13 +78,13 @@ msgstr "葡萄酒"
 #, object-pascal-format
 msgctxt "stringsunit.rsyouselected"
 msgid "You selected %s."
-msgstr "你选择%s."
+msgstr "你选择了 %s。"
 
 #: stringsunit.rsyouselectedat
 #, object-pascal-format
 msgctxt "stringsunit.rsyouselectedat"
 msgid "You selected %0:s at %1:s."
-msgstr "你选择%0:s在%1:s."
+msgstr "你选择的 %0:s 位于 %1:s。"
 
 #: tform2.caption
 msgid "Second Form"
@@ -93,7 +93,7 @@ msgstr "第二个窗体"
 #: tform2.checkgroup.caption
 msgctxt "TFORM2.CHECKGROUP.CAPTION"
 msgid "Several items"
-msgstr "一些项目"
+msgstr "多个项目"
 
 #: tform2.groupbox1.caption
 msgid "Please select"
@@ -102,7 +102,7 @@ msgstr "请选择"
 #: tform2.radiogroup.caption
 msgctxt "TFORM2.RADIOGROUP.CAPTION"
 msgid "Single item"
-msgstr "单个项目"
+msgstr "单个项"
 
 #: tmainform.button1.caption
 msgctxt "TMAINFORM.BUTTON1.CAPTION"
@@ -112,7 +112,7 @@ msgstr "打开第二个窗体"
 #: tmainform.button2.caption
 msgctxt "TMAINFORM.BUTTON2.CAPTION"
 msgid "What did you select?"
-msgstr "你选择了什么?"
+msgstr "你选择的是什么？"
 
 #: tmainform.caption
 msgctxt "TMAINFORM.CAPTION"
@@ -127,10 +127,10 @@ msgstr "选择语言"
 #: tmainform.lblcurrentselection.caption
 msgctxt "TMAINFORM.LBLCURRENTSELECTION.CAPTION"
 msgid "No drink selected."
-msgstr "无饮料选择."
+msgstr "未选择饮品。"
 
 #: tmainform.rgdrinks.caption
 msgctxt "TMAINFORM.RGDRINKS.CAPTION"
 msgid "Please select a drink"
-msgstr "请选择一种饮料"
+msgstr "请选择一个饮料"
 
