--- a/ide/packages/ideproject/languages/ideprojectstrconsts.zh_CN.po
+++ b/ide/packages/ideproject/languages/ideprojectstrconsts.zh_CN.po
@@ -1,9 +1,12 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
+"PO-Revision-Date: 2025-05-22 00:30+0800\n"
+"Last-Translator: ACTom <i@actom.me>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: TyPoEditor 0.2\n"
 
 #: ideprojectstrconsts.dlgprojectoptions
 msgid "Project Options"
@@ -16,55 +19,55 @@ msgstr "读取错误"
 #: ideprojectstrconsts.liscouldnotadditomainsource
 #, object-pascal-format
 msgid "Could not add \"{$I %s}\" to main source!"
-msgstr "不能添加\"{$I %s}\"到main源代码!"
+msgstr "无法将 \"{$I %s}\" 添加到主源文件！"
 
 #: ideprojectstrconsts.liscouldnotaddrtomainsource
 #, object-pascal-format
 msgid "Could not add \"{$R %s}\" to main source!"
-msgstr "不能添加\"{$R %s}\"到main源代码!"
+msgstr "无法将 \"{$R %s}\" 添加到主源文件！"
 
 #: ideprojectstrconsts.liscouldnotaddtomainsource
 #, object-pascal-format
 msgid "Could not add \"%s\" to main source!"
-msgstr "不能添加\"%s\"到main源代码!"
+msgstr "无法将 \"%s\" 添加到主源文件！"
 
 #: ideprojectstrconsts.liscouldnotremoveifrommainsource
 #, object-pascal-format
 msgid "Could not remove \"{$I %s}\" from main source!"
-msgstr "不能移除\"{$I %s}\"从main源代码!"
+msgstr "无法从主源移除 \"{$I %s}\"！"
 
 #: ideprojectstrconsts.liscouldnotremoverfrommainsource
 #, object-pascal-format
 msgid "Could not remove \"{$R %s}\" from main source!"
-msgstr "不能移除\"{$R %s}\"从main源代码!"
+msgstr "无法从主源中移除 \"{$R %s}\"！"
 
 #: ideprojectstrconsts.lisextendunitsearchpathofprojectwith
-#, object-pascal-format, fuzzy
+#, object-pascal-format
 msgid "Extend unit search path of project with%s\"%s\"?"
-msgstr "新的单元尚不在单元搜索路径.%s添加目录%s?"
+msgstr "扩展项目单元搜索路径至%s\"%s\"?"
 
 #: ideprojectstrconsts.lisfilenotfound2
 #, object-pascal-format
 msgid "File \"%s\" not found."
-msgstr "文件\"%s\"未找到."
+msgstr "文件 \"%s\" 未找到。"
 
 #: ideprojectstrconsts.lispkgdefsnamespaces
 msgid "Namespaces"
-msgstr "名称空间(名称空间)"
+msgstr "命名空间"
 
 #: ideprojectstrconsts.lisprojmangunabletoreadstatefileofprojecterror
-#, object-pascal-format
+#, object-pascal-format, fuzzy, badformat
 msgid "Unable to read state file %s of project %s%sError: %s"
-msgstr "不能读取状态(state)文件%s对于项目\"%s%s错误:%s"
+msgstr "无法读取项目 %s 的状态文件 %s错误: %s"
 
 #: ideprojectstrconsts.lisprojmangunabletowritestatefileforprojecterror
 #, object-pascal-format
 msgid "Unable to write state file for project %s%sError: %s"
-msgstr "不能写入状态(state)文件对于项目\"%s%s错误:%s"
+msgstr "无法为项目 %s 写入状态文件 %s 错误： %s"
 
 #: ideprojectstrconsts.lisprojprojectsourcedirectorymark
 msgid "Project Source Directory Mark"
-msgstr "项目源代码目录标记(Mark)"
+msgstr "项目源目录标记"
 
 #: ideprojectstrconsts.lisstrangelpifile
 msgid "Strange lpi file"
@@ -73,24 +76,24 @@ msgstr "奇怪的 lpi 文件"
 #: ideprojectstrconsts.listhefiledoesnotlooklikealpifile
 #, object-pascal-format
 msgid "The file %s does not look like a lpi file."
-msgstr "文件%s不看起来像一个lpi文件."
+msgstr "文件 %s 看起来不是一个 lpi 文件。"
 
 #: ideprojectstrconsts.lisunabletoreadlpi
 msgid "Unable to read lpi"
-msgstr "无法读取 lpi"
+msgstr "无法读取 lpi 文件"
 
 #: ideprojectstrconsts.lisunabletoreadtheprojectinfofile
 #, object-pascal-format
 msgid "Unable to read the project info file%s\"%s\"."
-msgstr "无法读取项目信息文件 %s\"%s\"。"
+msgstr "无法读取项目信息文件%s\"%s\"。"
 
 #: ideprojectstrconsts.lisunabletowritetheprojectinfofileerror
 #, object-pascal-format
 msgid "Unable to write the project info file%s\"%s\".%sError: %s"
-msgstr "无法写入项目信息文件 %s \"%s\"，%s 错误：%s"
+msgstr "无法写入项目信息文件 %s\"%s\".%s错误：%s"
 
 #: ideprojectstrconsts.lisunabletowritetheprojectsessionfileerror
 #, object-pascal-format
 msgid "Unable to write the project session file%s\"%s\".%sError: %s"
-msgstr "无法写入项目会话文件 %s \"%s\"，%s 错误：%s"
+msgstr "无法写入项目会话文件%s\"%s\".%s错误： %s"
 
