--- a/ide/packages/ideutils/languages/ideutilspkgstrconsts.zh_CN.po
+++ b/ide/packages/ideutils/languages/ideutilspkgstrconsts.zh_CN.po
@@ -1,14 +1,17 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: \n"
+"PO-Revision-Date: 2025-05-22 00:33+0800\n"
+"Last-Translator: ACTom <i@actom.me>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: TyPoEditor 0.2\n"
 
 #: ideutilspkgstrconsts.lisafilealreadyexistsreplaceit
 #, object-pascal-format
 msgid "A file \"%s\" already exists.%sReplace it?"
-msgstr "该文件\"%s\"已经存在.%s替换它?"
+msgstr "文件 \"%s\" 已存在%s是否替换？"
 
 #: ideutilspkgstrconsts.lisccoerrorcaption
 msgid "Error"
@@ -33,17 +36,17 @@ msgstr "目录未找到"
 #: ideutilspkgstrconsts.liserrorloadingfrom
 #, object-pascal-format
 msgid "Error loading %s from%s%s%s%s"
-msgstr "加载%s从%s%s%s%s错误"
+msgstr "加载 %s 时出错从 %s%s%s%s"
 
 #: ideutilspkgstrconsts.liserrorsavingto
 #, object-pascal-format
 msgid "Error saving %s to%s%s%s%s"
-msgstr "错误 保存%s到%s%s%s%s"
+msgstr "保存 %s 到 %s 时出错 %s%s%s"
 
 #: ideutilspkgstrconsts.lisfiledoesnotlooklikeatextfileopenitanyway
 #, object-pascal-format
 msgid "File \"%s\"%sdoes not look like a text file.%sOpen it anyway?"
-msgstr "文件\"%s\"%s看起来不是一个文本文件.%s仍然打开它?"
+msgstr "文件 \"%s\"%s看起来不是一个文本文件。%s仍然打开它吗？"
 
 #: ideutilspkgstrconsts.lisfileisnotwritable
 msgid "File is not writable"
@@ -63,12 +66,12 @@ msgstr "忽略并继续"
 
 #: ideutilspkgstrconsts.lisnotimplemented
 msgid "Not implemented"
-msgstr "没有implemented"
+msgstr "未实现"
 
 #: ideutilspkgstrconsts.lisnotimplementedyet
 #, object-pascal-format
 msgid "Not implemented yet:%s%s"
-msgstr "还没有implemented:%s%s"
+msgstr "尚未实现：%s%s"
 
 #: ideutilspkgstrconsts.lisopensymlink
 msgid "Open symlink"
@@ -93,7 +96,7 @@ msgstr "不能创建目录"
 #: ideutilspkgstrconsts.lispkgmangunabletodeletefile
 #, object-pascal-format
 msgid "Unable to delete file \"%s\"."
-msgstr "不能删除文件\"%s\"."
+msgstr "无法删除文件 \"%s\"。"
 
 #: ideutilspkgstrconsts.lisreaderror
 msgid "Read Error"
@@ -102,55 +105,55 @@ msgstr "读取错误"
 #: ideutilspkgstrconsts.lissourceanddestinationarethesame
 #, object-pascal-format
 msgid "Source and Destination are the same:%s%s"
-msgstr "源文件和目标是相同的:%s%s"
+msgstr "源和目标相同：%s%s"
 
 #: ideutilspkgstrconsts.listhecodetoolsfoundanerror
 #, object-pascal-format
 msgid "The Codetools found an error:%s%s"
-msgstr "CodeTools 找到了一个错误：%s%s"
+msgstr "Codetools 发现一个错误：%s%s"
 
 #: ideutilspkgstrconsts.listhedirectoryisnotwritable
 #, object-pascal-format
 msgid "The directory \"%s\" is not writable."
-msgstr "该目标%s是不可写的."
+msgstr "目录 \"%s\" 不可写。"
 
 #: ideutilspkgstrconsts.listhefileisasymlinkopeninstead
 #, object-pascal-format
 msgid "The file \"%s\" is a symlink.%sOpen \"%s\" instead?"
-msgstr "该文件\"%s\"是一个符号链接.%s打开\"%s\"代替?"
+msgstr "文件 \"%s\" 是一个符号链接。%s要打开 \"%s\" 吗？"
 
 #: ideutilspkgstrconsts.lisunabletocopyfile
 msgid "Unable to copy file"
-msgstr "不能复制文件"
+msgstr "无法复制文件"
 
 #: ideutilspkgstrconsts.lisunabletocopyfileto
 #, object-pascal-format
 msgid "Unable to copy file \"%s\"%sto \"%s\""
-msgstr "不能复制文件\"%s\"%s到\"%s\""
+msgstr "无法将文件 \"%s\"%s复制到 \"%s\""
 
 #: ideutilspkgstrconsts.lisunabletocreatedirectory
 #, object-pascal-format
 msgid "Unable to create directory \"%s\"."
-msgstr "不能创建目录\"%s\"."
+msgstr "无法创建目录 \"%s\"。"
 
 #: ideutilspkgstrconsts.lisunabletocreatefile
 msgid "Unable to create file"
-msgstr "不能创建文件"
+msgstr "无法创建文件"
 
 #: ideutilspkgstrconsts.lisunabletocreatefile2
 #, object-pascal-format
 msgid "Unable to create file \"%s\""
-msgstr "不能创建文件\"%s\""
+msgstr "无法创建文件 \"%s\""
 
 #: ideutilspkgstrconsts.lisunabletocreatefile3
 #, object-pascal-format
 msgid "Unable to create file%s\"%s\""
-msgstr "不能创建文件%s\"%s\""
+msgstr "无法创建文件%s\"%s\""
 
 #: ideutilspkgstrconsts.lisunabletocreatelinkwithtarget
 #, object-pascal-format
 msgid "Unable to create link \"%s\" with target \"%s\""
-msgstr "不能创建链接\"%s\"带有目标\"%s\""
+msgstr "无法创建链接 \"%s\" 目标为 \"%s\""
 
 #: ideutilspkgstrconsts.lisunabletoreadfile
 msgid "Unable to read file"
@@ -317,7 +320,7 @@ msgstr "俄罗斯语"
 
 #: ideutilspkgstrconsts.rslanguagesinhala
 msgid "Sinhala"
-msgstr ""
+msgstr "斯里兰卡语"
 
 #: ideutilspkgstrconsts.rslanguageslovak
 msgid "Slovak"
